--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 * {
-  padding: 0;
-  margin: 0;
+	padding: 0;
+	margin: 0;
 }
 
 .hide {
-  display: none;
+	display: none;
 }
 
 .car {
-  width: 50px;
-  height: 100px;
-  background: transparent url('./image/player.png') center / cover no-repeat;
+	width: 50px;
+	height: 100px;
+	background: transparent url('./image/car_mb.png') center / cover no-repeat;
 }
