--- a/style.css
+++ b/style.css
@@ -1,14 +1,170 @@
-* {
-	padding: 0;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
 	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+	display: block;
+}
+
+body {
+	line-height: 1;
+}
+
+ol,
+ul {
+	list-style: none;
+}
+
+blockquote,
+q {
+	quotes: none;
+}
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+	content: '';
+	content: none;
+}
+
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+.game {
+	width: 100%;
+	height: 100%;
 }
 
 .hide {
 	display: none;
 }
 
-.car {
+.car,
+.enemy {
 	width: 50px;
 	height: 100px;
-	background: transparent url('./image/car_mb.png') center / cover no-repeat;
+	background: transparent url('./image/hotpng.png') center / cover no-repeat;
+	position: absolute;
+	left: 125px;
+	bottom: 10px;
+
+}
+
+.gameArea {
+	width: 300px;
+	height: 100%;
+	position: relative;
+	margin: auto;
+	background: rgb(153, 146, 146);
+	overflow: hidden;
+	border-right: 5px solid rgba(248, 226, 30, 0.952);
+	border-left: 5px solid rgba(248, 226, 30, 0.952);
+
+}
+
+.line {
+	position: absolute;
+	width: 5px;
+	height: 50px;
+	background: rgba(248, 226, 30, 0.952);
+	left: 145px;
 }
